@@ -65,7 +65,7 @@ cleanexit ()
 
 	# Remove copied static shell to save disk space
 	if [ "$TMPDIR" ]; then
-		rm -f "$TMPDIR/bin/sh" "$TMPDIR/bin/bash"
+		rm -f "$TMPDIR/bin/sh"
 	fi
 
 	logmsg $LOG_DEBUG "exiting"
@@ -89,7 +89,7 @@ fi
 
 # Location of scripts/programs:
 SCRIPTDIR="$SYSTEM_ROOT/judge"
-STATICSHELL="$SYSTEM_ROOT/bin/bash-static"
+STATICSHELL="$SYSTEM_ROOT/bin/sh-static"
 RUNGUARD="$SYSTEM_ROOT/bin/runguard"
 
 logmsg $LOG_INFO "starting '$0', PID = $$"
@@ -198,10 +198,9 @@ chmod a+r testdata.in
 
 mkdir --mode=0711 bin dev proc
 # Copy the run-script and a statically compiled shell:
-cp -p "$SCRIPTDIR/$RUN_SCRIPT" .
-cp -p "$STATICSHELL"           ./bin/bash
-chmod a+rx "$RUN_SCRIPT" bin/bash
-ln -s bash ./bin/sh
+cp -p  "$SCRIPTDIR/$RUN_SCRIPT" .
+cp -pL "$STATICSHELL"           ./bin/sh
+chmod a+rx "$RUN_SCRIPT" bin/sh
 
 # Execute an optional chroot setup script:
 if [ "$USE_CHROOT" -a "$CHROOT_SCRIPT" ]; then
